--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
           <name>Sonatype Open Source Software Repository Hosting</name>
           <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
       </repository>
+      <repository>
+        <id>maven2-repository.netbeans.maven2</id>
+        <name>Netbeans Maven Repository</name>
+        <url>http://bits.netbeans.org/maven2/</url>
+        <layout>default</layout>
+      </repository> 
   </repositories>
 
   <dependencies>
@@ -149,7 +155,12 @@
       <groupId>org.antlr</groupId>
       <artifactId>antlr</artifactId>
       <version>3.4</version>
-    </dependency>
+    </dependency>    
+    <dependency>
+      <groupId>org.netbeans.external</groupId>
+      <artifactId>AbsoluteLayout</artifactId>
+      <version>RELEASE71</version>
+    </dependency>   
   </dependencies> 
   
   <reporting>
