--- a/pom.xml
+++ b/pom.xml
@@ -173,7 +173,17 @@
       <groupId>org.netbeans.external</groupId>
       <artifactId>AbsoluteLayout</artifactId>
       <version>RELEASE71</version>
-    </dependency>   
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>11.0.2</version>
+    </dependency>
   </dependencies> 
   
   <reporting>
