--- a/pom.xml
+++ b/pom.xml
@@ -1,198 +1,221 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.mycompany</groupId>
-  <artifactId>DistributedDocumentor-mvn</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <groupId>com.mycompany</groupId>
+    <artifactId>DistributedDocumentor-mvn</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-  <name>DistributedDocumentor-mvn</name>
-  <url>http://maven.apache.org</url>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>      
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>webstart-maven-plugin</artifactId>
-        <version>1.0-beta-3</version>
-      </plugin>
-	   <plugin>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <configuration>
-                <archive>
-                    <manifest>
-                        <mainClass>hu.distributeddocumentor.gui.MainWindow</mainClass>
-                    </manifest>
-                </archive>
-                <descriptorRefs>
-                    <descriptorRef>jar-with-dependencies</descriptorRef>
-                </descriptorRefs>
-            </configuration>
-        </plugin>
-    </plugins>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>webstart-maven-plugin</artifactId>
-          <version>1.0-beta-3</version>
+    <name>DistributedDocumentor-mvn</name>
+    <url>http://maven.apache.org</url>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>      
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>webstart-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>hu.distributeddocumentor.gui.MainWindow</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+        </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>webstart-maven-plugin</artifactId>
+                    <version>1.0-beta-3</version>
           
-          <executions>
-              <execution>
-                  <goals>
-                      <goal>report</goal>
-                  </goals>
-              </execution>
-          </executions>
-          <configuration>
-              <jnlp>
-                  <mainClass>hu.distributeddocumentor.gui.MainWindow</mainClass>
-              </jnlp>         
-              <verbose>true</verbose>
-              <sign>
-                  <keystore>ddkeystore</keystore>
-                  <keypass>m2m2m2</keypass>
-                  <storepass>m2m2m2</storepass>
-                  <alias>DistributedDocumentor</alias>
-                  <validity>3650</validity>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>report</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <jnlp>
+                            <mainClass>hu.distributeddocumentor.gui.MainWindow</mainClass>
+                        </jnlp>         
+                        <verbose>true</verbose>
+                        <sign>
+                            <keystore>ddkeystore</keystore>
+                            <keypass>m2m2m2</keypass>
+                            <storepass>m2m2m2</storepass>
+                            <alias>DistributedDocumentor</alias>
+                            <validity>3650</validity>
                   
-                  <dnameCn>Daniel Vigovszky</dnameCn>
-                  <dnameOu></dnameOu>
-                  <dnameO></dnameO>
-                  <dnameSt>Pest</dnameSt>
-                  <dnameC>HU</dnameC>
-                  <verify>false</verify>
-                  <keystoreConfig>
-                      <delete>true</delete>
-                      <gen>true</gen>
-                  </keystoreConfig>
-              </sign>
-              <outputJarVersions>false</outputJarVersions>
-              <verifyjar>false</verifyjar>
-              <unsignAlreadySignedJars>true</unsignAlreadySignedJars>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+                            <dnameCn>Daniel Vigovszky</dnameCn>
+                            <dnameOu></dnameOu>
+                            <dnameO></dnameO>
+                            <dnameSt>Pest</dnameSt>
+                            <dnameC>HU</dnameC>
+                            <verify>false</verify>
+                            <keystoreConfig>
+                                <delete>true</delete>
+                                <gen>true</gen>
+                            </keystoreConfig>
+                        </sign>
+                        <outputJarVersions>false</outputJarVersions>
+                        <verifyjar>false</verifyjar>
+                        <unsignAlreadySignedJars>true</unsignAlreadySignedJars>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
   
-  <repositories>
-      <repository>
-          <id>sonatype-ossrh</id>
-          <name>Sonatype Open Source Software Repository Hosting</name>
-          <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-      </repository>
-      <repository>
-        <id>maven2-repository.netbeans.maven2</id>
-        <name>Netbeans Maven Repository</name>
-        <url>http://bits.netbeans.org/maven2/</url>
-        <layout>default</layout>
-      </repository> 
-  </repositories>
+    <repositories>
+        <repository>
+            <id>sonatype-ossrh</id>
+            <name>Sonatype Open Source Software Repository Hosting</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
+            <id>maven2-repository.netbeans.maven2</id>
+            <name>Netbeans Maven Repository</name>
+            <url>http://bits.netbeans.org/maven2/</url>
+            <layout>default</layout>
+        </repository> 
+    </repositories>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.8.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.6.4</version>
-    </dependency>
-    <dependency>
-      <groupId>net.sourceforge.nekohtml</groupId>
-      <artifactId>nekohtml</artifactId>
-      <version>1.9.15</version>
-    </dependency>
-    <dependency>
-      <groupId>com.aragost.javahg</groupId>
-      <artifactId>javahg</artifactId>
-      <version>0.3-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>xerces</groupId>
-      <artifactId>xercesImpl</artifactId>
-      <version>2.10.0</version>
-    </dependency>
-    <dependency>
-      <groupId>net.sourceforge.mydoggy</groupId>
-      <artifactId>mydoggy-plaf</artifactId>
-      <version>1.5.0-beta-r1389</version>
-    </dependency>
-    <dependency>
-      <groupId>com.jidesoft</groupId>
-      <artifactId>jide-oss</artifactId>
-      <version>2.10.2</version>
-    </dependency>
-    <dependency>
-      <groupId>net.java.dev.swing-layout</groupId>
-      <artifactId>swing-layout</artifactId>
-      <version>1.0.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.eclipse</groupId>
-      <artifactId>mylyn.wikitext.core</artifactId>
-      <version>1.6.0.I20120115-1109</version>
-    </dependency>
-    <dependency>
-      <groupId>org.eclipse</groupId>
-      <artifactId>mylyn.wikitext.mediawiki.core</artifactId>
-      <version>1.6.0.I20120115-1109</version>
-    </dependency>
-    <dependency>
-        <groupId>org.fit</groupId>
-        <artifactId>cssbox</artifactId>
-        <version>3.4</version>
-    </dependency>
-    <dependency>
-        <groupId>cz.vutbr</groupId>
-        <artifactId>jStyleParser</artifactId>
-        <version>1.5</version>
-    </dependency>
-    <dependency>
-      <groupId>org.antlr</groupId>
-      <artifactId>antlr</artifactId>
-      <version>3.4</version>
-    </dependency>    
-    <dependency>
-      <groupId>org.netbeans.external</groupId>
-      <artifactId>AbsoluteLayout</artifactId>
-      <version>RELEASE71</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>3.1</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>11.0.2</version>
-    </dependency>
-  </dependencies> 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.6.4</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.nekohtml</groupId>
+            <artifactId>nekohtml</artifactId>
+            <version>1.9.15</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aragost.javahg</groupId>
+            <artifactId>javahg</artifactId>
+            <version>0.3-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+            <version>2.10.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.mydoggy</groupId>
+            <artifactId>mydoggy-plaf</artifactId>
+            <version>1.5.0-beta-r1389</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jidesoft</groupId>
+            <artifactId>jide-oss</artifactId>
+            <version>2.10.2</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.swing-layout</groupId>
+            <artifactId>swing-layout</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse</groupId>
+            <artifactId>mylyn.wikitext.core</artifactId>
+            <version>1.7.0.I20120405-2232</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse</groupId>
+            <artifactId>mylyn.wikitext.mediawiki.core</artifactId>
+            <version>1.7.0.I20120405-2232</version>
+        </dependency>
+        <dependency>
+            <groupId>org.fit</groupId>
+            <artifactId>cssbox</artifactId>
+            <version>3.4</version>
+        </dependency>
+        <dependency>
+            <groupId>cz.vutbr</groupId>
+            <artifactId>jStyleParser</artifactId>
+            <version>1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr</artifactId>
+            <version>3.4</version>
+        </dependency>    
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE71</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>11.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.ini4j</groupId>
+            <artifactId>ini4j</artifactId>
+            <version>0.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.1.3</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>4.1.3</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient-cache</artifactId>
+            <version>4.1.3</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies> 
   
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>webstart-maven-plugin</artifactId>
-        <version>1.0-beta-3</version>
-      </plugin>      
-    </plugins>
-  </reporting>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>webstart-maven-plugin</artifactId>
+                <version>1.0-beta-3</version>
+            </plugin>      
+        </plugins>
+    </reporting>
 </project>
