--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>jar</packaging>
 
     <name>DistributedDocumentor-mvn</name>
-    <url>http://maven.apache.org</url>
+    <url>http://maven.apache.org</url>   
     
     <build>
         <plugins>
@@ -101,6 +101,15 @@
             <url>http://bits.netbeans.org/maven2/</url>
             <layout>default</layout>
         </repository> 
+        <repository>
+            <id>sinusgear</id>
+            <name>sinusgear</name>
+            <url>http://maven.sinusgear.com/maven_repo/</url>            
+        </repository>
+        <repository>
+            <id>swt-repo</id>
+            <url>https://swt-repo.googlecode.com/svn/repo/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -207,6 +216,21 @@
             <artifactId>httpclient-cache</artifactId>
             <version>4.1.3</version>
             <scope>compile</scope>
+        </dependency>        
+        <dependency>
+            <groupId>chrriis.dj.nativeswing</groupId>
+            <artifactId>DJNativeSwing</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>chrriis.dj.nativeswing</groupId>
+            <artifactId>DJNativeSwing-SWT</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.swt</groupId>
+            <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
+            <version>3.7.2</version>
         </dependency>
     </dependencies> 
   
