--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,11 @@
             <version>4.1.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>net.sf.jazzy</groupId>
+            <artifactId>jazzy</artifactId>
+            <version>0.5.2-rtext-1.4.1-2</version>
+        </dependency>
     </dependencies> 
   
     <reporting>
