--- a/pom.xml
+++ b/pom.xml
@@ -125,11 +125,6 @@
             <version>1.6.4</version>
         </dependency>
         <dependency>
-            <groupId>net.sourceforge.nekohtml</groupId>
-            <artifactId>nekohtml</artifactId>
-            <version>1.9.15</version>
-        </dependency>
-        <dependency>
             <groupId>com.aragost.javahg</groupId>
             <artifactId>javahg</artifactId>
             <version>0.3-SNAPSHOT</version>
@@ -163,21 +158,6 @@
             <groupId>org.eclipse</groupId>
             <artifactId>mylyn.wikitext.mediawiki.core</artifactId>
             <version>1.7.0.I20120405-2232</version>
-        </dependency>
-        <dependency>
-            <groupId>org.fit</groupId>
-            <artifactId>cssbox</artifactId>
-            <version>3.4</version>
-        </dependency>
-        <dependency>
-            <groupId>cz.vutbr</groupId>
-            <artifactId>jStyleParser</artifactId>
-            <version>1.5</version>
-        </dependency>
-        <dependency>
-            <groupId>org.antlr</groupId>
-            <artifactId>antlr</artifactId>
-            <version>3.4</version>
         </dependency>    
         <dependency>
             <groupId>org.netbeans.external</groupId>
@@ -218,24 +198,19 @@
             <scope>compile</scope>
         </dependency>        
         <dependency>
-            <groupId>chrriis.dj.nativeswing</groupId>
-            <artifactId>DJNativeSwing</artifactId>
-            <version>1.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>chrriis.dj.nativeswing</groupId>
-            <artifactId>DJNativeSwing-SWT</artifactId>
-            <version>1.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.swt</groupId>
-            <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
-            <version>3.7.2</version>
-        </dependency>
-        <dependency>
             <groupId>net.sf.jazzy</groupId>
             <artifactId>jazzy</artifactId>
             <version>0.5.2-rtext-1.4.1-2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.lobobrowser</groupId>
+            <artifactId>cobra</artifactId>
+            <version>0.98.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.lobobrowser</groupId>
+            <artifactId>cobra-js</artifactId>
+            <version>0.98.4</version>
         </dependency>
     </dependencies> 
   
