Modified html renderer to flying saucer

--- a/pom.xml
+++ b/pom.xml
@@ -203,16 +203,6 @@
             <version>0.5.2-rtext-1.4.1-2</version>
         </dependency>
         <dependency>
-            <groupId>org.lobobrowser</groupId>
-            <artifactId>cobra</artifactId>
-            <version>0.98.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.lobobrowser</groupId>
-            <artifactId>cobra-js</artifactId>
-            <version>0.98.4</version>
-        </dependency>
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.6.4</version>
@@ -221,6 +211,11 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xhtmlrenderer</groupId>
+            <artifactId>core-renderer</artifactId>
+            <version>R8</version>
         </dependency>
     </dependencies> 
   
