--- a/pom.xml
+++ b/pom.xml
@@ -319,6 +319,11 @@
             <version>1.7.2</version>
             <scope>test</scope>            
         </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies> 
   
   <!--
