Partial implementation of documentation merging (Issue #48)

--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,26 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>2.12</version>
-            </plugin>            
+            </plugin>        
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.5.7.201204190339</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>    
         </plugins>
         <pluginManagement>
             <plugins>
@@ -297,9 +316,14 @@
             <artifactId>jfontchooser</artifactId>
             <version>1.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies> 
   
-  <!--
+    <!--
     <reporting>
         <plugins>
             <plugin>
