--- a/pom.xml
+++ b/pom.xml
@@ -227,20 +227,6 @@
             <groupId>net.java.dev.swing-layout</groupId>
             <artifactId>swing-layout</artifactId>
             <version>1.0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse</groupId>
-            <artifactId>mylyn.wikitext.core</artifactId>
-            <version>1.8.0-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/org.eclipse.mylyn.wikitext.core_1.8.0.I20130522-1811.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse</groupId>
-            <artifactId>mylyn.wikitext.mediawiki.core</artifactId>
-            <version>1.8.0-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/org.eclipse.mylyn.wikitext.mediawiki.core_1.8.0.I20130522-1811.jar</systemPath>
         </dependency>    
         <dependency>
             <groupId>org.netbeans.external</groupId>
@@ -324,6 +310,16 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.wikitext</groupId>
+            <artifactId>core</artifactId>
+            <version>1.8.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.wikitext</groupId>
+            <artifactId>mediawiki-core</artifactId>
+            <version>1.8.0-SNAPSHOT</version>
         </dependency>
     </dependencies> 
   
