--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,11 @@
             <id>jfontchooser</id>
             <url>http://jfontchooser.sourceforge.jp/repository/</url>
         </repository>
+        <repository> 
+            <id>bitbucket.org</id> 
+            <name>Internal Maven2 Repository</name> 
+            <url>https://bitbucket.org/W1M0/maven/raw/tip/2/</url> 
+        </repository> 
     </repositories>
 
     <dependencies>
@@ -320,6 +325,11 @@
             <groupId>org.wikitext</groupId>
             <artifactId>mediawiki-core</artifactId>
             <version>1.8.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.kitfox.svg</groupId>
+            <artifactId>svg-salamander</artifactId>
+            <version>1.0</version>
         </dependency>
     </dependencies> 
   
