--- a/pom.xml
+++ b/pom.xml
@@ -331,6 +331,11 @@
             <artifactId>svg-salamander</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swing-layout</artifactId>
+            <version>1.0.3</version>
+        </dependency>
     </dependencies> 
   
     <!--
